--- a/src/scss/bases/_base.scss
+++ b/src/scss/bases/_base.scss
@@ -1,5 +1,8 @@
 *,
 ::after,
 ::before {
-  box-sizing: border-box;
+   box-sizing: border-box;
+}
+body {
+   font-family: "Gordita", sans-serif;
 }
